--- a/css/style.css
+++ b/css/style.css
@@ -8,104 +8,9 @@ body {
   box-sizing: border-box;
 }
 
-ul, li {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  background-color: #ffffff;
-}
-
-ul {
-  position: relative;
-  display: flex;
-}
-
-ul li {
-  /* 如果设置为inline-block，会有空隙 */
-  /* https://stackoverflow.com/questions/19038799/why-is-there-an-unexplainable-gap-between-these-inline-block-div-elements */
-  list-style: none;
-  width: 120px;
-  line-height: 40px;
-  text-align: center;
-}
-
-ul li a {
-  color: #080808;
-  text-decoration: none;
-}
-
-li.logo {
-    float: left;
-    margin-left: 20%;
-    position: relative;
-}
-
-ul li div {
-  /* 如果设置为inline-block，会有空隙 */
-  /* https://stackoverflow.com/questions/19038799/why-is-there-an-unexplainable-gap-between-these-inline-block-div-elements */
-  list-style: none;
-  width: 120px;
-  line-height: 40px;
-  text-align: center;
-}
-
-.nav1 a {
-  color: #080808;
-  text-decoration: none;
-}
-
-.nav1 {
-  position: relative;/* 设置相对定位 */
-  display: inline-block;/* 让元素具有块级元素和行内元素的特性,即将块级元素转化为内联元素 */
-  list-style: none;
-  width: 120px;
-  line-height: 40px;
-  text-align: center;
-}
-
-.nav2 {
-  display: none;
-  position: relative;
-  background-color: #f9f9f9;
-  min-width: 81px;
-  line-height: 13px;
-}
-
-.nav2 a {
-  color: black;
-  padding: 12px 16px;
-  display: block;
-}
-
-.nav2 a:hover {
-  background-color: #44b812
-}
-
-.nav1:hover .nav2 {
-  display: block;
-}
-
-.nav1:hover,li:hover {
-  background-color: #6495ED;
-}
-
-li.logo:hover {
-  background-color: #ffffff;
-}
-
-.center {
-  text-align: center;
-}
-
+.center, 
 h1 {
   text-align: center;
-}
-
-body {
-  width: 100%;
-  height: 100%;
 }
 
 @keyframes rotate {
@@ -159,14 +64,12 @@ body {
   transform: translate(-50%, -50%);
 }
 
+a,
 .bold {
-  font-weight: bold;
-}
-
-a {
   font-weight: bold;
 }
 
 .footer-link {
   color: #6495ED;
+  font-size: 17px;
 }
